[project]
name = "emboucanr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chime>=0.7.0",
]

[tool.uv]
package = true
managed = true

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["src"]
packages = ["src"]
